// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in GifExperApp debe de mostrar una lista de categorias  1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Naruto"
      key="Naruto"
    />
    <GifGrid
      category="DragonBall"
      key="DragonBall"
    />
  </ol>
</Fragment>
`;

exports[`Test in GifExperApp debe existir GifExperApp 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
